--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   --primary-color: linear-gradient(to right, #FF2D95, #00BFFF);
   --lightest-color: #FCABFC;
-  --box-shadow: 0 0 5px 1px var(--lightest-color);
+  --box-shadow:0px 0px 9px 1px rgba(0,0,0,1);
   --jinx-blue: #009fd4;
   --vi-pink: #FF2D95;
   --arcane-purple: #2A1E3E;
   --gradient: radial-gradient(circle at top left, rgba(0, 0, 0, 0.3), transparent 60%);
   --purplish-gradient: linear-gradient(145deg, var(--logo-color), #5d7fff);
-  --blueish-gradient: linear-gradient(145deg, var(--jinx-blue), #6455b6);
+  --blueish-gradient: linear-gradient(145deg, var(--jinx-blue), #2b1f73);
   --font-family: 'Bebas Neue', sans-serif;
 }
 
@@ -30,8 +30,6 @@ body {
   font-family: var(--font-primary);
 
 }
-
-/* src/styles/global.css (or styles/buttons.css if you prefer modular separation) */
 
 /* Arcane Glitch Button Style */
 .arcane-button,
